# emojied

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  flake.nix  fly.toml  index.html  sqitch.conf
.github/: FUNDING.yml
.github/workflows/: main.yml  release.yml  test.yml
assets/: app.ts  tailwind.config.js
crates/web/: Cargo.toml
crates/web/src/: config.rs  controllers.rs  leaderboard.rs  lib.rs  sql.rs  state.rs  url.rs  views.rs
crates/web/src/sql/: insert_url.sql  select_leaderboard.sql
crates/web/src/views/: leaderboard.rs  root.rs  url.rs
nix/: emojied.nix  shell.nix
nix/modules/services/: emojied.nix
sql/: sqitch.plan
sql/deploy/: 20250215161708_add_links.sql  extensions.sql  index_links.sql  leaderboard.sql  links.sql
sql/revert/: 20250215161708_add_links.sql  extensions.sql  index_links.sql  leaderboard.sql  links.sql
sql/test/function/: app.sql
sql/verify/: 20250215161708_add_links.sql  extensions.sql  index_links.sql  leaderboard.sql  links.sql
src/: config.rs  controllers.rs  db.rs  emoji.rs  layouts.rs  leaderboard.rs  lib.rs  main.rs  state.rs  url.rs  views.rs
src/components/: icon.rs
src/layouts/: root.rs
src/views/: leaderboard.rs  root.rs  status.rs  url.rs
