[package]
name = "emojied"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
axum = "0.4"

# HTTP library
hyper = { version = "0.14", features = ["full"] }

# async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Middleware
tower = "0.4"

# Serialize/deserialize stuff
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
maud = { git = "https://github.com/lambda-fairy/maud", branch = "main", features = ["axum"] }

# Database
tokio-postgres = "0.7"
postgres-types = { version = "0.2", features = ["derive"] }

rand = "0.8"
unic-emoji-char = "0.9"
unic-char-range = "0.9"
unicode-segmentation = "1.9"
tiny_id = "0.1"
