[package]
name = "emojied"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# strip = true
# opt-level = "z"
# lto = true

[dependencies]
# Web framework
axum = { version = "0.6" }

# HTTP library
hyper = { version = "0.14", features = ["full"] }

# async runtime
tokio = { version = "1.2", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Middleware
tower = "0.4"

# Serialize/deserialize stuff
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }

# Database
tokio-postgres = "0.7"
deadpool-postgres = { version = "0.10", features = ["serde"] }

# native-tls
native-tls = "0.2"
postgres-native-tls = "0.5"

tracing = "0.1"

rand = "0.8"
unic-emoji-char = "0.9"
unic-char-range = "0.9"
unicode-segmentation = "1.9"
tiny_id = "0.1"
